==> 66Leslie/NNU-EE-Automation-Course-Materials/微控制器原理及应用/代码/综合实践_Final/3历史数据成功版/Touch/MDK/User/TouchPanel/TouchPanel.c <==
#include "TouchPanel.h"
#include "LCD.h"
#define THRESHOLD 2   /* 差值门限 */

void TP_Init(void) 
{ 
  	GPIO_InitTypeDef GPIO_InitStructure;
  	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB | RCC_AHB1Periph_GPIOC ,ENABLE);
		RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI2,ENABLE);
  	/* Configure SPI2 pins: SCK, MISO and MOSI ---------------------------------*/ 
		GPIO_PinAFConfig(GPIOB,  GPIO_PinSource13,  GPIO_AF_SPI2);
		GPIO_PinAFConfig(GPIOB,  GPIO_PinSource14,  GPIO_AF_SPI2);
		GPIO_PinAFConfig(GPIOB,  GPIO_PinSource15,  GPIO_AF_SPI2);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_15 | GPIO_Pin_13 | GPIO_Pin_14;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
		GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_DOWN;  
		GPIO_Init(GPIOB, &GPIO_InitStructure);
			/* TP_CS */
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
		GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;  
		GPIO_Init(GPIOC,&GPIO_InitStructure);
  	/* TP_IRQ */
  	GPIO_InitStructure.GPIO_Pin =  GPIO_Pin_5;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;
		GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
		GPIO_InitStructure.GPIO_PuPd  = GPIO_PuPd_UP;  
  	GPIO_Init(GPIOC, &GPIO_InitStructure);
  
  	TP_CS(1); 
  	ADS7843_SPI_Init(); 
}

static void WR_CMD (uint8_t cmd)  
{ 
  /* Wait for SPI2 Tx buffer empty */ 
  while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_TXE) == RESET); 
  /* Send SPI2 data */ 
  SPI_I2S_SendData(SPI2,cmd); 
  /* Wait for SPI2 data reception */ 
  while (SPI_I2S_GetFlagStatus(SPI2, SPI_I2S_FLAG_RXNE) == RESET); 
  /* Read SPI2 received data */ 
  SPI_I2S_ReceiveData(SPI2); 
}
